Bug 493222 - Black screen with mouse cursor shown when selecting "Rectangular Region" recording button
Summary: Black screen with mouse cursor shown when selecting "Rectangular Region" reco...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
: 493628 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-09-16 18:03 UTC by Justin Zobel
Modified: 2024-09-27 14:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2024-09-16 18:03:25 UTC
All built from git master

SUMMARY
When clicking on the "Rectangular Region" button in the recording tab my whole screen goes black but I can still see the mouse cursor and move it around.

STEPS TO REPRODUCE
1. Click Recording tab
2. Click Rectangular Region

OBSERVED RESULT
Whole screen goes black with only mouse cursor visible

EXPECTED RESULT
Rectangular region selection begins

SOFTWARE/OS VERSIONS
Operating System: Solus 4.5
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.10.9-302.current (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 PRO 4750U with Radeon Graphics
Memory: 29.1 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 20Y1001SAU
System Version: ThinkPad P14s Gen 1

ADDITIONAL INFORMATION
Pressing Escape on the keyboard returns me to my desktop.
Comment 1 David Pérez 2024-09-20 09:47:31 UTC
I'm experiencing this too:

- OpenSuse tumbleweed
- Wayland
- Plasma 6.1.15
- AMD integrated graphics.
Comment 2 David Pérez 2024-09-20 09:48:23 UTC
Operating System: CachyOS Linux 
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-4200M CPU @ 2.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 4600
Manufacturer: Hewlett-Packard
Product Name: HP ProBook 650 G1
System Version: A3009DD10303
Comment 3 eifr 2024-09-25 14:21:04 UTC
*** Bug 493628 has been marked as a duplicate of this bug. ***
Comment 4 David Pérez 2024-09-25 18:31:49 UTC
Luckily, the easy workaround is to use X11.
Apart from that (and xdotool and wmctrl cannot send keystrokes) Wayland works ok with Plasma.
Comment 5 Bug Janitor Service 2024-09-25 19:33:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6500
Comment 6 Zamundaaa 2024-09-26 18:39:11 UTC
Git commit 274ef5c97324c1f76822767c1004dbeb54c67cf4 by Xaver Hugl.
Committed on 26/09/2024 at 18:30.
Pushed by zamundaaa into branch 'master'.

scene/workspacescene: don't assume fullscreen clients are opaque

While the xdg shell specification says otherwise, in practice we have apps that
are translucent and expect that to work in fullscreen. More importantly, if we
don't enforce opaqueness with GPU compositing, we shouldn't do it in scanout either

M  +4    -2    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/274ef5c97324c1f76822767c1004dbeb54c67cf4
Comment 7 Zamundaaa 2024-09-26 18:51:40 UTC
Git commit 8158daa9358054bd1f7fb387324c1535b36fcaaf by Xaver Hugl.
Committed on 26/09/2024 at 18:42.
Pushed by zamundaaa into branch 'Plasma/6.2'.

scene/workspacescene: don't assume fullscreen clients are opaque

While the xdg shell specification says otherwise, in practice we have apps that
are translucent and expect that to work in fullscreen. More importantly, if we
don't enforce opaqueness with GPU compositing, we shouldn't do it in scanout either


(cherry picked from commit 274ef5c97324c1f76822767c1004dbeb54c67cf4)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +4    -2    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/8158daa9358054bd1f7fb387324c1535b36fcaaf